sfSandBoxCode/force-app/main/default/objects/sopoitm__c/sopoitm__c.object-meta.xml
<CustomObject>
    <label>Sales Purchase Order Item</label>
    <nameField>
        <displayFormat>SPOITM-{000000000}</displayFormat>
        <label>Sales Purchase Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Purchase Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>