sfSandBoxCode/force-app/main/default/objects/sopoitm__c/fields/FLIK_P_O_Item__c.field-meta.xml
<CustomField>
    <fullName>FLIK_P_O_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FLIK P O Item</label>
    <referenceTo>rstk__poitem__c</referenceTo>
    <relationshipLabel>Sales Purchase Order Items</relationshipLabel>
    <relationshipName>Sales_Purchase_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>