sfSandBoxCode/force-app/main/default/objects/sopoitm__c/fields/FLIK_P_O_Line__c.field-meta.xml
<CustomField>
    <fullName>FLIK_P_O_Line__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>FLIK P O Line</label>
    <referenceTo>rstk__poline__c</referenceTo>
    <relationshipLabel>Sales Purchase Order Items</relationshipLabel>
    <relationshipName>Sales_Purchase_Order_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>