sfSandBoxCode/force-app/main/default/objects/sopoitm__c/fields/FLIK_S_O_Product__c.field-meta.xml
<CustomField>
    <fullName>FLIK_S_O_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>FLIK S O Product</label>
    <referenceTo>rstk__soprod__c</referenceTo>
    <relationshipLabel>Sales Purchase Order Items</relationshipLabel>
    <relationshipName>Sales_Purchase_Order_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>