sfSandBoxCode/force-app/main/default/objects/sopoitm__c/fields/Sales_Purchase_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Purchase_Order_Status__c</fullName>
    <label>Sales Purchase Order Status</label>
    <referenceTo>sanergy_sopo_tracker__c</referenceTo>
    <relationshipLabel>Sales Purchase Order Items</relationshipLabel>
    <relationshipName>Sales_Purchase_Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>