sfSandBoxCode/force-app/main/default/objects/sopoitm__c/fields/SLK_Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>SLK_Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLK Opportunity Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sales Purchase Order Items</relationshipLabel>
    <relationshipName>Sales_Purchase_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>